--- a/packages/addons/browser/chrome/changelog.txt
+++ b/packages/addons/browser/chrome/changelog.txt
@@ -1,3 +1,9 @@
+111
+- chrome: update to 96.0.4664.45
+- harfbuzz: update to 3.1.1
+- pango: update to 1.49.3
+- shared-mime-info: update compile for meson 0.60.0
+
 110
 - fix dark mode toggle
 - versions >=91 use new flags to enable hardware accelerated video decode
