--- a/packages/addons/browser/chrome/changelog.txt
+++ b/packages/addons/browser/chrome/changelog.txt
@@ -1,3 +1,7 @@
+111
+- chrome: update to 96.0.4664.45
+- pango: update to 1.49.3
+
 110
 - fix dark mode toggle
 - versions >=91 use new flags to enable hardware accelerated video decode
