--- a/packages/addons/service/mpd/changelog.txt
+++ b/packages/addons/service/mpd/changelog.txt
@@ -1,6 +1,7 @@
 113
-- Update to version 0.23.4
-- Update libopenmpt to 0.5.13
+- Update to version 0.23.5
+- libmpdclient: update to 2.20
+- Update libopenmpt to 0.5.15
 
 112
 - Update to version 0.23.3
