system-tools: update to (127)

--- a/packages/addons/tools/system-tools/changelog.txt
+++ b/packages/addons/tools/system-tools/changelog.txt
@@ -1,3 +1,14 @@
+127
+- Update bottom to 0.6.6
+- Update efibootmgr to githash 2021-11-05
+- Update efivar to githash 2021-12-10
+- Update file to 5.41
+- Update htop to 3.1.2
+- Add libgpiod (1.6.3)
+- Update nmon to 16n
+- Update unrar to 6.1.3
+- Update vim to 8.2.3878
+
 126
 - Update bottom to 0.6.4
 - Update diffutils to 3.8
