--- a/packages/addons/browser/chrome/changelog.txt
+++ b/packages/addons/browser/chrome/changelog.txt
@@ -1,3 +1,11 @@
+112
+- chrome: update to 97.0.4692.71
+- cups: update to 2.4.02
+- gtk3: update to 3.24.31
+- harfbuzz: update to 3.2.0
+- icu: update to 70.1 and PKG_SITE
+- pango: update to 1.50.3
+
 111
 - chrome: update to 96.0.4664.45
 - harfbuzz: update to 3.1.1
