dotnet-runtime: Drop ASP.NET 5.x and Add ASP.NET 6.x and addon (115)

--- a/packages/addons/tools/dotnet-runtime/changelog.txt
+++ b/packages/addons/tools/dotnet-runtime/changelog.txt
@@ -1,3 +1,9 @@
+115
+- Add .NET Runtime 6.0.1
+- Add ASP.NET Core Runtime 6.0.1
+- Drop .NET Runtime 5.0.7
+- Drop ASP.NET Core Runtime 5.0.7
+
 114
 - Add .NET Runtime 5.0.7
 - Add ASP.NET Core Runtime 5.0.7
