--- a/packages/addons/service/snapserver/changelog.txt
+++ b/packages/addons/service/snapserver/changelog.txt
@@ -1,3 +1,7 @@
+109
+- Add non-empty icons for snapweb
+- Fix stream argument for snapserver
+
 108
 - alsa-plugins: update to 1.2.6
 - asio: update to 1.21.0
