snapserver: Add librespot options (110)
- Add options to set librespot devicename and zeroconf-port
- Update addon meta information to rev 110

--- a/packages/addons/service/snapserver/changelog.txt
+++ b/packages/addons/service/snapserver/changelog.txt
@@ -1,3 +1,6 @@
+110
+- Add options to set librespot devicename and zeroconf-port
+
 109
 - Add non-empty icons for snapweb
 - Fix stream argument for snapserver
