--- a/packages/addons/tools/dotnet-runtime/changelog.txt
+++ b/packages/addons/tools/dotnet-runtime/changelog.txt
@@ -1,3 +1,7 @@
+116
+- Update .NET Runtime 6.0.4
+- Update ASP.NET Core Runtime 6.0.4
+
 115
 - Add .NET Runtime 6.0.1
 - Add ASP.NET Core Runtime 6.0.1
