dotnet-runtime: Update .NET and ASP.NET 6.x to 6.0.5 and addon (117)

--- a/packages/addons/tools/dotnet-runtime/changelog.txt
+++ b/packages/addons/tools/dotnet-runtime/changelog.txt
@@ -1,4 +1,8 @@
 116
+- Update .NET Runtime 6.0.5
+- Update ASP.NET Core Runtime 6.0.5
+
+116
 - Update .NET Runtime 6.0.4
 - Update ASP.NET Core Runtime 6.0.4
 
