docker: update rev to 136

--- a/packages/addons/service/docker/changelog.txt
+++ b/packages/addons/service/docker/changelog.txt
@@ -1,3 +1,7 @@
+136
+- moby: update to 22.06.0-beta.0
+- cli: update to 22.06.0-beta.0
+
 135
 - containerd: update to 1.6.5
 - libnetwork: update to 2022-03-16
