--- a/packages/addons/service/docker/changelog.txt
+++ b/packages/addons/service/docker/changelog.txt
@@ -1,3 +1,7 @@
+137
+- containerd: update to 1.6.6
+- runc: update to 1.1.3
+
 136
 - moby: update to 22.06.0-beta.0
 - cli: update to 22.06.0-beta.0
