jellyfin: update to 10.8.1
update 2.7.7 to 2.8.1

release notes:
- https://github.com/jellyfin/jellyfin/releases

--- a/packages/addons/service/jellyfin/changelog.txt
+++ b/packages/addons/service/jellyfin/changelog.txt
@@ -1,3 +1,15 @@
+105
+- Update to Jellyfin 10.8.1
+
+104
+- Not released for LibreELEC 10.0
+
+103
+- Not released for LibreELEC 10.0
+
+102
+- Not released for LibreELEC 10.0
+
 101
 - Update Jellyfin to 2.7.7
 
