dotnet-runtime: Add ASP.NET 6.x 6.0.5 and addon (119)

--- a/packages/addons/tools/dotnet-runtime/changelog.txt
+++ b/packages/addons/tools/dotnet-runtime/changelog.txt
@@ -1,3 +1,18 @@
+119
+- Add ASP.NET Core Runtime 6.0.6
+
+118
+- Not released for LibreELEC 10.0
+
+117
+- Not released for LibreELEC 10.0
+
+116
+- Not released for LibreELEC 10.0
+
+115
+- Not released for LibreELEC 10.0
+
 114
 - Add .NET Runtime 5.0.7
 - Add ASP.NET Core Runtime 5.0.7
