locale addon: fix call of localedef
- Set stdin to /dev/null to fix error on Generic (GBM)
  CompletedProcess(args=['/storage/.kodi/addons/service.locale/bin/localedef', '-v', '-f', 'UTF-8', '-i', 'de_DE', '/storage/.kodi/addons/service.locale/locpath/de_DE.UTF-8'], returncode=4, stdout=b'', stderr=b"gzip: invalid magic\ngzip: invalid magic\n[error] character map file `UTF-8' not found: No such file or directory\n[warning] LC_NAME: field `name_gen' not defined\n[warning] LC_ADDRESS: field `country_post' not defined\n[warning] LC_ADDRESS: field `country_isbn' not defined\n[warning] LC_IDENTIFICATION: field `audience' not defined\n[warning] LC_IDENTIFICATION: field `application' not defined\n[warning] LC_IDENTIFICATION: field `abbreviation' not defined\n[error] no output file produced because errors were issued\n"

- Add error detection code

--- a/packages/addons/service/locale/source/resources/language/English/strings.po
+++ b/packages/addons/service/locale/source/resources/language/English/strings.po
@@ -17,3 +17,7 @@ msgstr ""
 msgctxt "#30003"
 msgid "Locale changed to {}. Please reboot to apply globally."
 msgstr ""
+
+msgctxt "#30004"
+msgid "Creating locale {} failed. Aborting."
+msgstr ""
