--- a/packages/addons/service/snapserver/changelog.txt
+++ b/packages/addons/service/snapserver/changelog.txt
@@ -1,3 +1,7 @@
+111
+- Update shairport-sync to 4.1
+- Add nqptp to support shairport-sync AirPlay 2
+
 110
 - Add options to set librespot devicename and zeroconf-port
 
