network-tools: update addon (119)

--- a/packages/addons/tools/network-tools/changelog.txt
+++ b/packages/addons/tools/network-tools/changelog.txt
@@ -1,3 +1,12 @@
+119
+- irssi: update to 1.4.3 and meson build
+- ngrep: update to using pcre2
+- nmap: update to 7.93
+- rsync: update to 3.2.7
+
+115-118
+- not released for LibreELEC 10.0
+
 114
 - nmap: update to 7.92 and HSTS
 
