system-tools: update to addon (134)

--- a/packages/addons/tools/system-tools/changelog.txt
+++ b/packages/addons/tools/system-tools/changelog.txt
@@ -1,3 +1,16 @@
+134
+- efibootmgr: update to 18
+- fdupes: update to 2.2.1
+- file: update to 5.43
+- inotify-tools: update to 3.22.6.0
+- kmsxx: update to githash 2022-11-05
+- libmtp: update to 1.1.20
+- mmc-utils: update to 2022-11-09
+- stress-ng: update to 0.14.06
+- st: update to 0.9
+- unrar: update to 6.2.2
+- vim: update to 9.0.0905
+
 133
 - include fuse
 
