--- a/packages/addons/service/librespot/changelog.txt
+++ b/packages/addons/service/librespot/changelog.txt
@@ -1,121 +1,1 @@
-130
-- Update to 0.3.1
-
-129
-- Python: add new setting for zeroconf port
-
-128
-- Python: fix Librespot output is utf-8
-
-127
-- Update to 0.1.6
-
-126
-- rust: update to 1.50.0
-
-125
-- Update to 0.1.3
-- Revert to dns-sd instead of mdns
-
-124
-- Update to 9f3a02e (2020-06-22)
-- Fix switching playback with Android
-
-123
-- Handle non ascii track information
-
-122
-- Improve track information: fanart, podcast
-- Improve settings: autoplay, name, RTP port
-- Drop system.d
-
-121
-- Update to 66f8a98 (2020-02-26)
-- Gapless playback
-
-120
-- Update to 0.1.1
-
-119
-- Update to f610436 (2020-01-02)
-- Hook audiotype
-- Use vorbis, which is more responsive than lewton
-- Build alsa backend and provide sample alsa service
-- Python 3 compliance
-
-118
-- Update to 0.1.0
-
-117
-- Update to 51a634d (2019-07-23)
-- Set bit rate to 320 kpbs
-
-116
-- Update to 4e3576b (2019-06-01)
-- Only use Kodi
-- Rework
-
-115
-- Update to daeeeaa (2019-02-22)
-
-114
-- Fix discovery mode setting
-- Start after Kodi
-
-113
-- Update to 96557b4
-
-112
-- Update to a4e0f58
-- Rework Python
-- Correct codec in Kodi mode
-- Fix setting change
-- Fix wizard
-- Fix zapping issue
-- Display album, artist, icon and title
-- Wait for librespot.onevent to finish
-
-111
-- Update to 431be9e
-- Fix delay with Kodi playback option
-- Cache volume
-
-110
-- Update to 685fb4e
-- Add kSupportsPlaylistV2 enum
-
-109
-- Refer librespot-org repository
-- Update to bc7ceb3
-- Set stream type to audio in Kodi mode
-- Initial volume as a setting
-
-108
-- Correct bug which prevented disabling the service from Kodi
-- Place named pipe in /var/run/librespot
-
-107
-- Update to ddfc28f
-
-106
-- Rework code
-- Display artist and title on track load
-
-105
-- Update to 910974e
-
-104
-- Switch from ffmpegx to pulseaudio to stream to Kodi
-- Wait for sound.target
-
-103
-- Update system_information_string
-
-102
-- Update to aa86ebf
-
-101
-- Enable streaming to Kodi
-
-100
-- Initial addon
+initial release
