--- a/packages/addons/service/mpd/changelog.txt
+++ b/packages/addons/service/mpd/changelog.txt
@@ -1,55 +1,1 @@
-115
-- Update to version 0.23.10
-- faad2: update to 2.10.1
-
-114
-- Update to version 0.23.8
-- mpd-mpc: update to 0.34
-
-113
-- Update to version 0.23.5
-- libmpdclient: update to 2.20
-- Update libopenmpt to 0.5.15
-
-112
-- Update to version 0.23.3
-
-111
-- include wavpack support
-- Update to version 0.22.9
-
-110
-- Update to version 0.22.6
-
-109
-- Update to version 0.22.3
-- Enabled fifo
-
-108
-- Update to version 0.21.24
-
-107
-- Update to version 0.21.4
-
-106
-- Update to version 0.20.21
-
-105
-- Update to version 0.20.19
-- Added mpd cli client mpc
-
-104
-- Update to version 0.20.13
-- Build with more features
-
-103
-- Update to version 0.20.9
-
-102
-- Update to version 0.20.3
-
-101
-- Rebuild for libogg
-
-100
-- Initial LibreELEC version
+initial release
