--- a/packages/addons/service/net-snmp/changelog.txt
+++ b/packages/addons/service/net-snmp/changelog.txt
@@ -1,40 +1,1 @@
-111
-- update to 5.9.3
-
-110
-- update to 5.9.2
-
-109
-- update to 5.9.1
-
-108
-- Migrate strings.xml to strings.po 
-
-107
-- update to 5.9
-
-106
-- update to 5.8
-
-105
-- Improve configuration screen
-- Make snmpv3 work again (missing include)
-- Expose cputemp and/or gputemp with extends optionally
-
-104
-- Change daemon startup option
-
-103
-- update config.sub to support new hardware
-- disable mini-agent in config options to get system MIB
-- compile static binary to avoid cross compiling linking issue
-
-102
--version bump
-
-101
-- make addon configurable
-
-100
-- Initial addon
-- net-snmp 5.7.3
+initial release
