--- a/packages/addons/service/pcscd/changelog.txt
+++ b/packages/addons/service/pcscd/changelog.txt
@@ -1,9 +1,1 @@
-102
-- ccid: update to 1.5.1
-- pcsc-lite: update to 1.9.9
-
-101
-- ccid: update to 1.4.34
-
-100
-- initial addon
+initial release
