--- a/packages/addons/service/syncthing/changelog.txt
+++ b/packages/addons/service/syncthing/changelog.txt
@@ -1,66 +1,1 @@
-122
-- update to 1.22.0
-
-121
-- update to 1.21.0
-
-120
-- update to 1.20.1
-
-119
-- update to 1.20.0
-
-118
-- update to 1.18.5
-
-117
-- update to 1.17.0
-
-116
-- update to 1.16.1
-
-115
-- Update to 1.15.1
-- fix script - STNODEFAULTFOLDER=1
-
-114
-- Update to 1.14.0
-
-113
-- Update to 1.13.1
-
-112
-- Update to 1.12.1
-
-111
-- Update to 1.12.0
-
-110
-- Update to 1.5.0
-
-109
-- Update to 1.4.2
-
-108
-- Update to 1.2.0
-
-107
-- Update to 1.0.0
-
-106
-- Update to 0.14.49
-
-105
-- Update to 0.14.29
-
-103
-- Update to 0.14.3
-
-102
-- Enable automatic upgrades
-
-101
-- Update to 0.12.24
-
-100
-- Initial addon
+initial release
