--- a/packages/addons/service/ttyd/changelog.txt
+++ b/packages/addons/service/ttyd/changelog.txt
@@ -1,23 +1,1 @@
-106
-- update to 1.7.0
-- libuv: update to 1.44.2
-- libwebsockets: update to 4.3.2
-
-105
-- fix ttyd to include missing evlib_uv library
-
-104
-- libuv: update to 1.42.0
-
-103
-- libwebsockets: update to 4.3.0
-
-102
-- update to 1.6.3
-
-101
-- update to 1.6.1
-- fix disconnections
-
-100
-- initial LibreELEC version
+initial release
