--- a/packages/addons/tools/btrfs-progs/changelog.txt
+++ b/packages/addons/tools/btrfs-progs/changelog.txt
@@ -1,35 +1,1 @@
-111
-- update to 6.0.2
-
-110
-- update to 6.0
-
-109
-- update to 5.19
-
-108
-- update to 5.18.1
-
-107
-- update to 5.18
-
-106
-- update to 5.17
-
-105
-- update to 5.15.1
-
-104
-- update to 5.15
-
-103
-- rebuild with --disable-zstd
-
-102
-- Update to 4.15.1
-
-101
-- no changes
-
-100
-- Initial Release
+initial release
