--- a/packages/addons/tools/network-tools/changelog.txt
+++ b/packages/addons/tools/network-tools/changelog.txt
@@ -1,90 +1,1 @@
-119
-- irssi: update to 1.4.3
-
-118
-- sshfs: update to 3.7.3
-- include fuse and fuse3
-
-117
-- iperf: update to 3.12
-- nmap: update to 7.93
-
-116
-- rsync: update to 3.2.5
-
-115
-- irssi: update to 1.4.2 and meson build
-- ngrep: update to using pcre2
-
-114
-- iperf: update to 3.11
-- nmap: update to 7.92 and HSTS
-
-112
-- rsync: add lchmod workaround patches
-
-111
-- iperf: update to 3.10.1
-- libstatgrab: update to 0.92.1
-
-110
-- libpcap: update to 1.10.1
-- tcpdump: update to 4.99.1
-
-109
-- irssi: update to 1.2.3
-- lftp: update to 4.9.2
-- rar2fs: update to 1.29.5
-
-108
-- bwm-ng: update to 0.6.3
-- iftop: update to 2018-10-03
-- libpcap: revert to building with configure (107)
-- tcpdump: update to 4.99.0
-
-107
-- libpcap: update to 1.10.0
-- ngrep: update to 2019-01-29
-
-106
-- bwm-ng: update to 0.6.2
-- iperf: update to 3.9
-- irssi: update to 1.2.2
-- libpcap: update to 1.9.1
-- libstatgrab: update to 0.92
-- nmap: update to 7.91
-- rar2fs: update to 1.29.3
-- tcpdump: update to 4.9.3
-- udpxy: update to 1.0-25.1 and PKG_URL
-
-105
-- update rsync to 3.2.3
-
-104
-- drop iw
-
-103
-- added rar2fs
-- updated iperf to 3.6
-- updated irssi to 1.1.2
-- updated lftp to 4.8.4
-
-102
-- updated iperf to 3.5
-- updated irssi to 1.1.1
-- updated iw to 4.14
-- updated lftp to 4.8.3
-- updated ncftp to 3.2.6
-- updated ngrep to latest
-- updated nmap to 7.70
-- updated rsync to 3.1.3
-- updated sshfs to 2.10
-- updated tcpdump to 4.9.2
-- updated udpxy to 1.0.23-12
-- updated wireless_tools to 30.pre9
-
-101
-- rebuild
-
-100
-- Initial Release
+initial release
