--- a/packages/addons/service/proftpd/changelog.txt
+++ b/packages/addons/service/proftpd/changelog.txt
@@ -1,24 +1,1 @@
-106
-- update to proftpd 1.3.7e
-- generate password hashes with python
-- drop whois requirement
-
-105
-- update to proftpd 1.3.7d
-- update to whois 5.5.13
-
-104
-- update to proftpd 1.3.7c
-- update to whois 5.5.11
-
-103
-- update to proftpd 1.3.7a
-
-102
-- update to proftpd 1.3.6
-
-101
-- rebuild
-
-100
-- initial LibreELEC release
+initial release
