--- a/packages/addons/service/rsyslog/changelog.txt
+++ b/packages/addons/service/rsyslog/changelog.txt
@@ -1,44 +1,1 @@
-113
-- rsyslog: update to 8.2210.0
-
-112
-- rsyslog: update to 8.2208.0
-
-111
-- rsyslog: update to 8.2206.0
-
-110
-- rsyslog: update to 8.2204.0
-
-109
-- rsyslog: update to 8.2112.0
-
-108
-- rsyslog: update to 8.2106.0
-
-107
-- librelp: update to 1.10.0
-- rsyslog: update to 8.2102.0
-
-106
-- libfastjson: update to 0.99.9
-
-105
-- rsyslog: update to 8.2012.0
-
-104
-- rsyslog: update to 8.37.0
-
-103
-- Rebuild
-
-102
-- Add first run wizard configuration menu
-
-101
-- Add RELP Protocol
-- Add ability to compress messages using TCP/UDP protocols
-- Update configuration files using newer standards
-
-100
-- Initial addon
+initial release
