--- a/packages/addons/service/snapclient/changelog.txt
+++ b/packages/addons/service/snapclient/changelog.txt
@@ -1,40 +1,1 @@
-109
-- Set ALSA_PLUGIN_DIR in systemd service unit
-
-108
-- alsa-plugins: update to 1.2.6
-- asio: update to 1.21.0
-- popl: update to 1.3.0
-- snapcast: update to 0.26.0
-
-107
-- asio: update to 1.18.2
-- libconfig: update to 1.7.3
-- shairport-sync: update to 3.3.8
-- snapcast: update to 0.25.0
-
-106
-- Fixed issue when listing sound cards
-- Added the option to specify the snapcast server host address
-
-105
-- aixlog: update to 1.5.0
-- snapcast: update to 0.24.0
-
-104
-- Update to 0.23.0
-
-103
-- Update to 0.22.0
-
-102
-- Update to 0.15.0
-- Add alsa-plugins
-
-101
-- Always restart service
-- Improve latency setting
-- Keep daemon state
-
-100
-- Initial addon
+initial release
