--- a/packages/addons/service/snapserver/changelog.txt
+++ b/packages/addons/service/snapserver/changelog.txt
@@ -1,46 +1,1 @@
-111
-- Update shairport-sync to 4.1
-- Add nqptp to support shairport-sync AirPlay 2
-
-110
-- Add options to set librespot devicename and zeroconf-port
-
-109
-- Add non-empty icons for snapweb
-- Fix stream argument for snapserver
-
-108
-- alsa-plugins: update to 1.2.6
-- asio: update to 1.21.0
-- popl: update to 1.3.0
-- snapcast: update to 0.26.0
-
-107
-- asio: update to 1.18.2
-- libconfig: update to 1.7.3
-- shairport-sync: update to 3.3.8
-- snapcast: update to 0.25.0
-
-106
-- Added options to enable and configure the HTTP server
-
-105
-- aixlog: update to 1.5.0
-- snapcast: update to 0.24.0
-
-104
-- Update to 0.23.0
-
-103
-- Update to 0.22.0
-
-102
-- Update to 0.15.0
-
-101
-- Add streaming from Kodi
-- Keep daemon state
-- Rework settings
-
-100
-- Initial addon
+initial release
