--- a/packages/addons/service/tigervnc/changelog.txt
+++ b/packages/addons/service/tigervnc/changelog.txt
@@ -1,14 +1,1 @@
-105
-- Update to 1.10.1
-
-103
-- Update to 1.9.0
-
-102
-- Update to 1.8.0
-
-101
-- update to 1.7.1
-
-100
-- Initial addon
+initial release
